<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vacina.create.VacinaCreateFragment">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="@+id/guide_start"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pc_logo_2" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_create_vacina"
                android:textColor="@color/purple_700"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/guide_end"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_tipo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/label_tipo_vacina"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/guide_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:startIconDrawable="@drawable/ic_science">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_tipo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName|textCapSentences"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_data"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/label_data_vacina"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/til_tipo"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dataProx"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/label_dataProx_vacina"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/til_data"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_dataProx"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/voltar"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                app:cornerRadius="6dp"
                app:layout_constraintStart_toStartOf="@+id/guide_start"
                app:layout_constraintTop_toBottomOf="@+id/til_dataProx" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_registrar"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_register"
                android:textSize="18sp"
                app:cornerRadius="6dp"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintTop_toBottomOf="@+id/til_dataProx" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>