<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cadastrar"
                android:layout_width="176dp"
                android:layout_height="67dp"
                android:layout_marginBottom="56dp"
                android:text="@string/label_registrar"
                android:textColor="#F4F4F4"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gl_start"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="@+id/gl_end"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="176dp"
                android:layout_height="67dp"
                android:layout_marginBottom="28dp"
                android:text="@string/label_login"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
                app:layout_constraintEnd_toStartOf="@+id/gl_start"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="@+id/gl_end"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/logoAnimais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="440dp"
                android:contentDescription="@string/logoanimais"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gl_start"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/animais" />

            <ImageView
                android:id="@+id/appNome"
                android:layout_width="229dp"
                android:layout_height="101dp"
                android:contentDescription="@string/appnome"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toStartOf="@+id/gl_start"
                app:layout_constraintStart_toStartOf="@+id/gl_end"
                app:layout_constraintTop_toBottomOf="@+id/logoAnimais"
                app:layout_constraintVertical_bias="0.11"
                app:srcCompat="@drawable/nomeapp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>